# weavemesh-core

./: .gitignore  Cargo.toml  LICENSE  README-WURTZ.md  README.md  SAFETY_PROTOCOLS.md
docs/: weavemesh-core-architecture-diagrams.md
examples/: basic_node.rs  collaborative_individuation_demo.rs  collaborative_individuation_embodiment_demo.rs  comprehensive_security_demo.rs  core_ide_complete_integration_demo.rs  core_ide_integration_demo.rs  financial_demo.rs  full_integration_demo.rs  meta_pattern_recognition_demo.rs  multi_perspective_debate_demo.rs  networking_demo.rs  security_demo.rs  simple_communication.rs  storage_tokens_demo.rs  wurtz_narrative_demo.rs
src/: attribution.rs  group_communication.rs  http.rs  lib.rs  narrative.rs  node.rs  protocol.rs  sacred_alliance.rs  serialization.rs  situation.rs  storage.rs  tokens.rs
src/financial/: mod.rs  simple_demo  simple_demo.rs  standalone_demo.rs  test_standalone.rs
src/git/: attribution_integration.rs  conflict_detection.rs  hooks.rs  mod.rs  operations.rs  repository.rs  state_tracking.rs  workflow_integration.rs
src/ide/: ceremony.rs  collaboration.rs  editor.rs  mod.rs  project.rs  security.rs
src/mesh/: discovery.rs  events.rs  health.rs  manager.rs  mod.rs  node.rs  resource.rs  security.rs
src/networking/: mod.rs  node_communication.rs  node_discovery.rs  zenoh_integration.rs
src/security/: authentication.rs  authorization.rs  core.rs  mod.rs  yubikey.rs
tests/: test_situation_only.rs
